# hw-otus-arch-n-patterns

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
hw01_unit_tests/app/: main.py
hw01_unit_tests/tests/: test_solve.py
hw02_movement/: main.py
hw02_movement/app/: uobject.py
hw02_movement/app/adapters/: movable.py  rotatable.py
hw02_movement/app/commands/: rotate.py
hw02_movement/app/data_types/: vector.py
hw02_movement/tests/: test_rotate.py
space_battle/app/: exception_handler.py  queue.py
space_battle/app/adapters/: burns_fuel.py  change_velocity.py  has_fuel.py  move_burn_fuel.py  rotate_change_velocity.py
space_battle/app/commands/: base.py  burn_fuel.py  change_velocity.py  check_fuel.py  log_exception.py  move.py  retry.py  rotate.py
space_battle/app/commands/macro/: base.py  move_burn_fuel.py  rotate_change_velocity.py
space_battle/app/data_types/: __init__.py  direction.py
space_battle/tests/: test_burn_fuel.py  test_change_velocity.py  test_check_fuel.py  test_move.py  test_move_burn_fuel.py  test_queue.py  test_rotate_change_velocity.py
