[tool.poetry]
name = "hw-otus-arch-n-patterns"
version = "0.1.0"
description = "Homeworks for Architecture and patterns course"
authors = ["Maxim Gromov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
